@@ -1,3 +1,10 @@
+2006-08-04  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* src/kahua-httpd.scm:
+	- Clean up all kind of error handling.
+	- Clean up dead code.
+	- Request line, method, URI, HTTP version are as parameters now.
+
 2006-08-03  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* src/kahua-httpd.scm:
